Center logbook entry contents. Fix input spacing in overview cell.

--- a/src/components/dashboard-logbooks/logbook-entries.module.scss
+++ b/src/components/dashboard-logbooks/logbook-entries.module.scss
@@ -1,4 +1,8 @@
 .container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
   width: 100%;
   padding: var(--sixteenPixels);
+  padding-right: var(--fourHundredPixels);
 }
